--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,9 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 :root{
     --font-family: 'Poppins', sans-serif;
     --text: 400 1rem/1.2 var(--font-family);
@@ -22,4 +28,23 @@
 
     --error:#DC2626;
 
+}
+
+body{
+    overflow: hidden;
+
+    font: var(--text);
+    color: var(--text-secondary);
+
+
+
+}
+
+
+h1,h2{
+    color: var(--text-primary);
+}
+
+img{
+    max-width: 100%;
 }
