--- a/styles/fields/index.css
+++ b/styles/fields/index.css
@@ -18,7 +18,7 @@ label{
     margin-bottom: .25rem;
 }
 
-input:focus, textarea:focus, select:focus{
+input:focus, textarea:focus, select:focus, input[type="date"]:focus-within{
     outline: .25rem solid var(--surface-secondary);
     border: .12rem solid var(--stroke-highlight);
     outline-offset: .1px;
