--- a/styles/global.css
+++ b/styles/global.css
@@ -13,6 +13,7 @@
     --text-secondary:#57534E;
     --text-tertiary: #8F8881;
     --text-highlight: #E43A12;
+    --text-drop: #A8A29E;
 
 
     --brand-light:#F67841;
